# Mtyped-Compiler

./: Compiler Test.bat
Source/: Buffer.c  Buffer.h  CMakeLists.txt  Compilers.c  Compilers.h  MainBuffer.c  MainParser.c  MainScanner.c  Parser.c  Parser.h  Scanner.c  Scanner.h
Test Files/: MTYPED_Empty.out  MTYPED_Hello.mty  MTYPED_Hello.out  MTYPED_Volume.mty  MTYPED_Volume.out
